incluindo o nome do sistema no HTML

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
 
     <main id="content">
-        <h1>Sistema de Reserva de Canoas</h1>
+        <h1>VA'Alugar - Sistema de Reserva de Canoas</h1>
         <div id="criacao-reserva" class="step">
             <!-- Passo 1: Busca de canoas por cidade -->
             <h2>Processo 1: Criação de uma reserva</h2>
